cabal-version:       2.0
name:                finkel-kernel
version:             0.0.0
synopsis:            Finkel kernel language and compiler
description:
  Finkel kernel language and compiler
  .
  See the <https://finkel.readthedocs.org documentation> for more info.

homepage:            https://github.com/finkel-lang/finkel#readme
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
copyright:           2017-2021 8c6794b6
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     include/*.h
                     --
                     test/data/eval/*.fnk
                     test/data/exception/*.fnk
                     test/data/syntax/*.fnk
                     test/data/main/*.c
                     test/data/main/*.hs
                     test/data/main/*.fnk
                     test/data/make/*.c
                     test/data/make/*.hs
                     test/data/make/*.fnk
                     test/data/make/*.fnk.1
                     test/data/make/*.fnk.2
                     test/data/make/M4/*.fnk
                     test/data/make/M6/*.fnk

tested-with:           GHC == 8.2.2
                     , GHC == 8.4.4
                     , GHC == 8.6.5
                     , GHC == 8.8.2
                     , GHC == 8.10.2
                     , GHC == 8.10.7
                     , GHC == 9.0.1
                     , GHC == 9.2.1

custom-setup
  setup-depends:       base     >= 4.10  && < 5
                     , Cabal    >= 2.0   && < 3.7
                     , filepath >= 1.4.1 && < 1.5

flag dev
  description:         Flag for internal development
  default:             False
  manual:              True

library
  hs-source-dirs:      src
  exposed-modules:     Paths_finkel_kernel
                       Language.Finkel
                       Language.Finkel.Builder
                       Language.Finkel.Emit
                       Language.Finkel.Error
                       Language.Finkel.Eval
                       Language.Finkel.Exception
                       Language.Finkel.Expand
                       Language.Finkel.Form
                       Language.Finkel.Homoiconic
                       Language.Finkel.Lexer
                       Language.Finkel.Make
                       Language.Finkel.Main
                       Language.Finkel.Reader
                       Language.Finkel.Fnk
                       Language.Finkel.SpecialForms
                       Language.Finkel.Syntax
  other-modules:       Language.Finkel.Form.Fractional
                       Language.Finkel.Make.Recompile
                       Language.Finkel.Make.Summary
                       Language.Finkel.Make.TargetSource
                       Language.Finkel.Make.Trace
                       Language.Finkel.Syntax.Extension
                       Language.Finkel.Syntax.Location
                       Language.Finkel.Syntax.SynUtils
                       Language.Finkel.Syntax.HBind
                       Language.Finkel.Syntax.HDecl
                       Language.Finkel.Syntax.HExpr
                       Language.Finkel.Syntax.HImpExp
                       Language.Finkel.Syntax.HPat
                       Language.Finkel.Syntax.HType
  autogen-modules:     Paths_finkel_kernel
  includes:            Syntax.h
                       ghc_modules.h
  include-dirs:        include
  c-sources:           include/hooks.c
  build-depends:       array        >= 0.5.2  && < 0.6
                     , base         >= 4.10   && < 5
                     , binary       >= 0.8.5  && < 0.9
                     , bytestring   >= 0.10.8 && < 0.12
                     , containers   >= 0.5.10 && < 0.7
                     , deepseq      >= 1.4.3  && < 1.5
                     , directory    >= 1.3.0  && < 1.4
                     , exceptions   >= 0.8.3  && < 0.11
                     , filepath     >= 1.4.1  && < 1.5
                     , ghc          >= 8.2.0  && < 9.3.0
                     , ghc-boot     >= 8.2.0  && < 9.3.0
                     , ghci         >= 8.2.0  && < 9.3.0
                     , process      >= 1.6.1  && < 1.7
                     , time         >= 1.8.0  && < 1.12
  build-tool-depends:  alex:alex    >= 3.1.7  && < 3.5
                     , happy:happy  >= 1.19.5 && < 1.23
  default-language:    Haskell2010
  ghc-options:         -Wall

executable finkel-profile
  if !flag(dev)
    buildable:         False
  hs-source-dirs:      exec
  main-is:             profile.hs
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base
                     , bytestring
                     , filepath
                     , ghc
                     , finkel-kernel
  default-language:    Haskell2010

test-suite finkel-kernel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       FormTest
                       FnkTest
                       EmitTest
                       EvalTest
                       ExceptionTest
                       MainTest
                       MakeTest
                       SyntaxTest
                       Orphan
                       TestAux
                       Paths_finkel_kernel
  build-depends:       base
                     , binary
                     , bytestring
                     , containers
                     , deepseq
                     , directory
                     , exceptions
                     , filepath
                     , ghc
                     , process
                     , finkel-kernel
                     --
                     , QuickCheck   >= 2.10.1 && < 2.15
                     , hspec        >= 2.4.8  && < 2.9
                     , silently     >= 1.2    && < 1.3
                     , transformers >= 0.5.2  && < 0.6

  -- The "Linker.c" codes in the "rts" package bundled with ghc 8.10.3 had
  -- problem when running the tests with "+RTS -N", disabling.
  if impl (ghc >= 8.10.3)
    ghc-options:       -Wall -threaded -rtsopts
  else
    ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/finkel-lang/finkel.git
  subdir:   finkel-kernel
