cabal-version:       2.0
name:                finkel-setup
version:             0.0.0
synopsis:            Cabal setup script helper for Finkel
description:
  Cabal setup script helper for Finkel
  .
  See the <https://finkel.readthedocs.org documentation> for more info.

homepage:            https://github.com/finkel-lang/finkel#readme
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
copyright:           2017-2022 8c6794b6
category:            Language
build-type:          Simple
extra-source-files:  README.md
                     --
                     test/data/p01/LICENSE
                     test/data/p01/p01.cabal
                     test/data/p01/Setup.hs
                     test/data/p01/exec/p01.hs
                     test/data/p01/src/P01/*.fnk
                     test/data/p01/src/P01/*.hs
                     test/data/p01/test/*.fnk
                     test/data/p01/test/*.hs
                     --
                     test/data/p02/LICENSE
                     test/data/p02/CHANGELOG.md
                     test/data/p02/p02.cabal
                     test/data/p02/Setup.hs
                     test/data/p02/app/Main.hs
                     test/data/p02/src/MyLib.hs
                     test/data/p02/test/Main.hs

tested-with:           GHC == 8.10.7
                     , GHC == 9.0.1
                     , GHC == 9.2.8
                     , GHC == 9.4.6
                     , GHC == 9.6.5
                     , GHC == 9.8.2
                     , GHC == 9.10.1

library
  hs-source-dirs:      src
  exposed-modules:     Distribution.Simple.Finkel
  build-depends:       Cabal     >= 3.2   && < 3.11
                     , base      >= 4.14  && < 5
                     , directory >= 1.3.0 && < 1.4
                     , filepath  >= 1.4.1 && < 1.6
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite finkel-setup-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , directory
                     , filepath
                     , finkel-kernel
                     , finkel-setup
                       --
                     , ghc           >= 8.10.0 && < 9.11
                     , hspec         >= 2.4.8  && < 2.12
  build-tool-depends:  fkc:fkc
                     , fnkpp:fnkpp
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/finkel-lang/finkel.git
  subdir:   finkel-setup
