cabal-version:       2.0
name:                finkel-tool
version:             0.0.0
synopsis:            Finkel tool
description:
  Finkel tool
  .
  See the <https://finkel.readthedocs.org documentation> for more info.

homepage:            https://github.com/finkel-lang/finkel#readme
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
copyright:           2017-2022 8c6794b6
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     finkel.hsfiles
                     test/data/*.fnk
                     test/data/input01.txt
                     test/data/p02/LICENSE
                     test/data/p02/Setup.hs
                     test/data/p02/p02.cabal
                     test/data/p02/README.md
                     test/data/p02/stack.yaml
                     test/data/p02/app/Main.hs
                     test/data/p02/src/Lib.fnk
                     test/data/p02/test/Spec.hs

tested-with:           GHC == 8.10.7
                     , GHC == 9.0.2
                     , GHC == 9.2.8
                     , GHC == 9.4.7
                     , GHC == 9.6.5
                     , GHC == 9.8.2
                     , GHC == 9.10.1

custom-setup
  setup-depends:       base  >= 4.14 && < 5
                     , Cabal >= 3.2  && < 3.13
                     , finkel-setup == 0.0.0

flag dynamic
  description:         Dynamically link executables (except Windows)
  default:             True
  manual:              True

library
  hs-source-dirs:      src
  exposed-modules:     Finkel.Tool.Command
                       Finkel.Tool.Command.Eval
                       Finkel.Tool.Command.Help
                       Finkel.Tool.Command.Make
                       Finkel.Tool.Command.Repl
                       Finkel.Tool.Command.Run
                       Finkel.Tool.Command.Sdist
                       Finkel.Tool.Command.Version
                       Finkel.Tool.Internal.CLI
                       Finkel.Tool.Internal.Commit
                       Finkel.Tool.Internal.Compat
                       Finkel.Tool.Internal.Eval
                       Finkel.Tool.Internal.Exception
                       Finkel.Tool.Internal.IO
                       Finkel.Tool.Internal.Listen
                       Finkel.Tool.Internal.Loop
                       Finkel.Tool.Internal.Macro.Ghc
                       Finkel.Tool.Internal.Macro.Repl
                       Finkel.Tool.Internal.Types
                       Finkel.Tool.Main
                       Paths_finkel_tool
  autogen-modules:     Paths_finkel_tool
  build-depends:       base          >= 4.14   && < 5
                     , bytestring    >= 0.10   && < 0.13
                     , Cabal         >= 3.2    && < 3.13
                     , deepseq       >= 1.4    && < 1.6
                     , directory     >= 1.3    && < 1.4
                     , exceptions    >= 0.10   && < 0.11
                     , filepath      >= 1.4.1  && < 1.6
                     , haskeline     >= 0.8    && < 0.9
                     , ghc           >= 8.10.0 && < 9.11.0
                     , ghc-boot      >= 8.10.0 && < 9.11.0
                     , ghci          >= 8.10.0 && < 9.11.0
                     , network       >= 2.6.3  && < 3.3
                     , process       >= 1.6    && < 1.7
                     , transformers  >= 0.5    && < 0.7
                       --
                     , finkel-kernel == 0.0.0
                     , finkel-core   == 0.0.0
                     , finkel-setup  == 0.0.0

  default-language:    Haskell2010

  ghc-options:         -Wall
  build-tool-depends:  fnkpp:fnkpp == 0.0.0
  if impl (ghc >= 9.6.0)
     ghc-options:      -fplugin Finkel.Core.Plugin
                       -keep-hscpp-files
  else
     ghc-options:      -F -pgmF fnkpp -optF --warn-interp=False
                       -fplugin Finkel.Core.Plugin

test-suite finkel-tool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , directory
                     , exceptions
                     , filepath
                     , ghc
                     , haskeline
                     , network
                     , process
                     , finkel-core
                     , finkel-kernel
                     , finkel-tool
                     --
                     , hspec      >= 2.4.8  && < 2.12
                     , silently   >= 1.2    && < 1.3
                     , QuickCheck >= 2.10.1 && < 2.16
  other-modules:       CLITest
                       GhcTest
                       MainTest
                       ReplTest
                       ReplMacroTest
                       TestAux
  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  if !os(windows) && flag(dynamic)
    ghc-options:       -dynamic
  if impl (ghc >= 9.6.0)
    ghc-options:       -fplugin Finkel.Core.Plugin
                       -keep-hscpp-files
  else
     build-tool-depends: fnkpp:fnkpp == 0.0.0
     ghc-options:      -F -pgmF fnkpp -optF --warn-interp=False
                       -fplugin Finkel.Core.Plugin

source-repository head
  type:     git
  location: https://github.com/finkel-lang/finkel.git
  subdir:   finkel-tool
