cabal-version:       2.0
name:                finkel
version:             0.0.0
synopsis:            Haskell in S-expression
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
copyright:           2020-2022 8c6794b6
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md
                     README.md

description:
  Package for the @finkel@ executable.
  .
  See the <https://finkel.readthedocs.org documentation> for more info.

executable finkel
  main-is:             Main.hs
  build-depends:       base        >= 4.14 && < 5
                     , finkel-tool == 0.0.0
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
                       -rtsopts=all
                       "-with-rtsopts=-K512M -H -I5 -T"

source-repository head
  type:     git
  location: https://github.com/finkel-lang/finkel.git
  subdir:   finkel
