cabal-version:       2.0
name:                finkel-kernel
version:             0.0.0
synopsis:            Finkel kernel language and compiler
description:
  Finkel kernel language and compiler
  .
  See the <https://finkel.readthedocs.org documentation> for more info.

homepage:            https://github.com/finkel-lang/finkel#readme
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
copyright:           2017-2020 8c6794b6
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     include/Syntax.h
                     test/data/eval/*.fnk
                     test/data/syntax/*.fnk
                     test/data/main/*.c
                     test/data/main/*.hs
                     test/data/main/*.fnk
                     test/data/make/*.c
                     test/data/make/*.hs
                     test/data/make/*.fnk

tested-with:           GHC == 8.2.2
                     , GHC == 8.4.4
                     , GHC == 8.6.5
                     , GHC == 8.8.2
                     , GHC == 8.10.2

custom-setup
  setup-depends:       base     >= 4.10  && < 5
                     , Cabal    >= 2.0   && < 3.3
                     , filepath >= 1.4.1 && < 1.5

flag dynamic
  description:         Dynamically link executables (except Windows)
  default:             True
  manual:              True

flag dev
  description:         Flag for internal development
  default:             False
  manual:              True

library
  hs-source-dirs:      src
  exposed-modules:     Paths_finkel_kernel
                       Language.Finkel
                       Language.Finkel.Builder
                       Language.Finkel.Emit
                       Language.Finkel.Eval
                       Language.Finkel.Expand
                       Language.Finkel.Form
                       Language.Finkel.Homoiconic
                       Language.Finkel.Lexer
                       Language.Finkel.Make
                       Language.Finkel.Main
                       Language.Finkel.Reader
                       Language.Finkel.Fnk
                       Language.Finkel.SpecialForms
                       Language.Finkel.Syntax
                       Language.Finkel.TargetSource
  other-modules:       Language.Finkel.Syntax.SynUtils
                       Language.Finkel.Syntax.HDecl
                       Language.Finkel.Syntax.HExpr
                       Language.Finkel.Syntax.HIE
                       Language.Finkel.Syntax.HPat
                       Language.Finkel.Syntax.HType
  autogen-modules:     Paths_finkel_kernel
  includes:            Syntax.h
  include-dirs:        include
  c-sources:           include/hooks.c
  build-depends:       array        >= 0.5.2  && < 0.6
                     , base         >= 4.10   && < 5
                     , bytestring   >= 0.10.8 && < 0.11
                     , containers   >= 0.5.10 && < 0.7
                     , deepseq      >= 1.4.3  && < 1.5
                     , directory    >= 1.3.0  && < 1.4
                     , filepath     >= 1.4.1  && < 1.5
                     , ghc          >= 8.2.0  && < 8.11.0
                     , ghc-boot     >= 8.2.0  && < 8.11.0
                     , ghci         >= 8.2.0  && < 8.11.0
                     , time         >= 1.8.0  && < 1.10
                     , process      >= 1.6.1  && < 1.7
  build-tool-depends:  alex:alex    >= 3.1.7  && < 3.3
                     , happy:happy  >= 1.19.5 && < 1.20
  default-language:    Haskell2010
  ghc-options:         -Wall

executable finkel-profile
  if !flag(dev)
    buildable:         False
  hs-source-dirs:      exec
  main-is:             profile.hs
  ghc-options:         -Wall -threaded -rtsopts
  if !os(windows) && flag(dynamic)
    ghc-options:       -dynamic
  build-depends:       base
                     , bytestring
                     , filepath
                     , ghc
                     , finkel-kernel
  default-language:    Haskell2010

test-suite finkel-kernel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       FormTest
                       FnkTest
                       EmitTest
                       EvalTest
                       MainTest
                       MakeTest
                       SyntaxTest
                       Orphan
                       TestAux
                       Paths_finkel_kernel
  build-depends:       base
                     , bytestring
                     , containers
                     , deepseq
                     , directory
                     , filepath
                     , ghc
                     , process
                     , finkel-kernel
                     --
                     , QuickCheck   >= 2.10.1 && < 2.14
                     , hspec        >= 2.4.8  && < 2.8
                     , transformers >= 0.5.2  && < 0.5.7
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/finkel-lang/finkel.git
  subdir:   kernel
